# bocchi-the-botter

./: .gitignore  README.md  pyproject.toml  requirements.txt
chapters/: README.md
chapters/season1/ch00_prologue/: README.md  run.py
chapters/season1/ch01_1_spread_correction/: README.md  run.py
chapters/season1/ch01_usdjpy_bb_mr/: README.md  run.py
chapters/season1/ch02_gbpjpy_spread_sensitivity/: README.md  run.py
chapters/season1/ch03_two_year_segments/: README.md  run.py
chapters/season1/ch04_wfa_two_pairs/: README.md  run.py
chapters/season1/ch05_wfa_four_pairs/: README.md  run.py
chapters/season1/ch06_donchian_compare/: README.md  run.py
chapters/season1/ch07_physical_metrics/: README.md  run.py
chapters/season2/ch01_orb_1h_translation/: README.md  figures.py  run.py
chapters/season2/ch02_minute_data_db/: README.md  build_manifest.py  figures.py  run.py
chapters/season2/ch03_orb_m15_retranslation/: README.md  figures.py  run.py  verify.py
chapters/season2/ch04_ict_order_blocks/: README.md  build_manifest.py  compare.py  figures.py  run.py  verify.py
chapters/season2/ch05_ict_ob_secondary/: README.md
results/reference/: README.md
results/reference/ch01_orb_1h_translation/: segments_S2-1_ORB_USDJPY_main_net.csv  trades_S2-1_ORB_USDJPY_main_net.csv  trades_S2-1_ORB_USDJPY_ref_net.csv
results/reference/ch02_minute_data_db/: manifest.json
tests/: test_ict_ob.py  test_ict_ob_comparison.py  test_ict_ob_evidence.py  test_ict_ob_experiment.py  test_s2_1_orb.py  test_s2_2_minute_data.py  test_s2_3_orb_m15.py
(+95 files in other folders)
