[project]
name = "bocchi-the-botter-repro"
version = "0.0.0"
description = "Reproduction code for the bocchi-the-botter Note series"
requires-python = ">=3.13"
dependencies = [
    "pandas==3.0.2",
    "yfinance==1.3.0",
    "pyarrow==23.0.1",
    "numpy==2.4.4",
    "backtesting==0.6.5",
    "matplotlib==3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

